--- a/style.css
+++ b/style.css
@@ -251,8 +251,8 @@ p{
 
 }
 .btn:hover{
-  background-color: rgba(198, 186, 215, 1);
-  color: rgba(44, 131, 215, 0.5);
+  background-color: rgba(253, 153, 29, 1);;
+  color: white
 }
  .btnCenter{
   display: flex;
