--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     padding: 0;
   }
   body {
-    background-color: hsla(265, 27%, 79%, 1);
+    background-color: #25C2E9ff;
     /* background-color: #333; */
     height: 100vh;
     /* display: flex;
@@ -25,7 +25,7 @@
   
   /**** css *** navbar*/
   .bg-light {
-    background-color: #0096DFff!important;
+    background-color: #D83F22ff!important;
 }
   ul {
     display: flex;
