--- a/style.css
+++ b/style.css
@@ -269,12 +269,12 @@ margin: 2%;
  #effetButtons {
   text-decoration: none;
   text-transform: uppercase;
-  font-size: 22px;
+  font-size: 14px;
   font-family: verdana;
   letter-spacing: 3px;
   height: 60px;
   width: 200px;
-  line-height: 60px;
+  /* line-height: 60px; */
   text-align: center;
   color: #FDC518;
   position: relative;
