--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     padding: 0;
   }
   body {
-    background-color: #25C2E9ff;
+    background-color: rgb(183, 227, 239);
     /* background-color: #333; */
     height: 100vh;
     /* display: flex;
