modif color nav bar blue

--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    align-items: center; */
+    align-items: center; 
   font-family: "Raleway", Arial, sans-serif;
   color: #5E5953ff; ;
 }
