--- a/style.css
+++ b/style.css
@@ -146,8 +146,10 @@ ul li a:hover:before {
 }
 /* fin css navabar*/
 
-/* css titres et textes pages d'acceuil*/
-
+/* css titres et textes pages d'accueil*/
+h1{
+  margin-top: 1em;
+}
 h1, h2{
   text-align: center;
 }
@@ -166,8 +168,11 @@ font-size: smaller;
 }
 .noWrap{
 display: inline;
+color: #000000;
 }
 /* fin css titres et textes page d'accueil */
+
+
 /* css image mobile avec description après le hover*/
  .container {
   width: 270px;
@@ -200,16 +205,17 @@ display: inline;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  color: white;
+  color: rgb(7, 7, 7);
   text-transform: uppercase;
 }
 
 h3 {
+  color: white;
   text-align: center;
   font-size: 17px;
   padding: 20px;
   margin-top: 20px;
-  background:linear-gradient(90deg, #FD991Dff, #C6BAD7ff, #5E5953ff, #0096DFff, #D83F22ff, #25C2E9ff, #FCEC3Bff);
+  background:linear-gradient(290deg, #FD991Dff, #C6BAD7ff, #5E5953ff, #0096DFff, #D83F22ff, #25C2E9ff, #FCEC3Bff);
 }
 
 #paragraphe {
@@ -222,7 +228,7 @@ h3 {
 #linkCard {
   text-decoration: none;
   background: #FCEC3Bff;
-  color: linear-gradient(135deg, #FD991Dff, #C6BAD7ff, #5E5953ff, #0096DFff, #D83F22ff, #25C2E9ff, #FCEC3Bff);;
+  color: #003E80;
   width: 65%;
   padding: 25px;
   margin-bottom: 48px;
@@ -250,7 +256,7 @@ h3 {
 }
 
 .container:before {
- background-color: #D83F22ff;
+ background-color: #CEFF90;
  opacity: 0;
  transition: all 0.3s; 
 }
@@ -293,12 +299,12 @@ h3 {
 
 /* css buttons page accueil*/
 .btn{
-background-color: rgba(46, 176, 223, 1);;
+background-color: #3BF8FC;
 color: #2C83D7ff;
 
 }
 .btn:hover{
-background-color: hsla(336, 67%, 58%, 1);
+background-color: #dc4c86;
 color: white
 }
 .btnCenter{
@@ -323,7 +329,8 @@ margin: 2%;
   width: 200px;
   /* line-height: 60px; */
   text-align: center;
-  color: rgba(253, 226, 224, 1);
+  /* color: #6D0E09; */
+  color: #001010;
   position: relative;
   margin: 1em;
 }
