--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-
-
 * {
     box-sizing: border-box;
     margin: 0;
@@ -342,8 +340,8 @@ margin: 2%;
   width: 200px;
   top: -15px;
   left: 0;
-  border-left: 4px solid rgba(194, 246, 251, 1);
-  border-right: 4px solid rgba(45, 109, 133, 1);
+  border-left: 4px solid rgb(144, 233, 121);
+  border-right: 4px solid rgb(216, 51, 51);
   transition: all 01s;
 }
 
