--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ ul li a span {
   margin-top: 4px;
 }
 ul li a span:hover {
-  color: white;
+  color: rgb(253, 251, 251);
 }
 
 a:hover span:nth-child(1) {
@@ -131,7 +131,8 @@ ul li a:before {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #ed2626;
+  /* background-color: #ed2626; */
+  color:rgb(7, 7, 7);
   transform: scaleX(0);
   transform-origin: left;
   transition: 0.5s;
@@ -141,6 +142,21 @@ ul li a:hover:before {
   transform: scaleX(1);
   transform-origin: right;
   transition-delay: 0.5s;
+}
+
+ .dropdown-item {
+  color: rgb(254, 254, 254);
+  background-color:#0096DFff ;
+  border-radius: 5px;
+}
+.dropdown-item:hover {
+  color: #0096DFff;
+  background-color:rgb(248, 249, 250) ;
+  border-radius: 5px;
+}
+.dropdown-menu{
+  background-color: #0096DFff;
+  border: 1px solid whitesmoke;
 }
 /* fin css navabar*/
 
