--- a/style.css
+++ b/style.css
@@ -314,13 +314,14 @@ h3 {
 
 /* css buttons page accueil*/
 .btn{
-background-color: #3BF8FC;
-color: #2C83D7ff;
+
+background-color: #dc4c86;
+color: white
 
 }
 .btn:hover{
-background-color: #dc4c86;
-color: white
+  background-color: #70d5d7;
+  color: #2C83D7ff;
 }
 .btnCenter{
 display: flex;
