--- a/style.css
+++ b/style.css
@@ -257,7 +257,7 @@ h3 {
 /*hovering effect goes here */
 .container {
  background-color: #0096DFff;
- border: 10px solid #C6BAD7ff;
+ border: 10px solid rgba(52, 137, 179, 0.924);
  overflow: hidden;
 }
 
@@ -339,6 +339,7 @@ margin: 2%;
   text-decoration: none;
   text-transform: uppercase;
   font-size: 14px;
+  font-weight: 900;
   font-family: verdana;
   letter-spacing: 3px;
   height: 60px;
