--- a/style.css
+++ b/style.css
@@ -166,6 +166,7 @@ ul li a:hover:before {
 #apostrophe{
   font-family: 'Satisfy', cursive;
   padding: 0;
+  color: #333333;
 
 }
 h1{
@@ -200,9 +201,12 @@ p{
   text-align: center;
   padding: 5%;
 }
+.MargTParagraphe{
+  margin-top: 1em;
+}
 .important{
-  font-weight: 800;
-
+  font-weight: bold;
+  text-decoration:underline;
 }
 .textAlignCenter{
 display: inline;
