nav menu + menu DropDown FONTsize +++

--- a/style.css
+++ b/style.css
@@ -112,6 +112,7 @@ ul li a span {
   text-transform: capitalize;
   transition-delay: 0.5s;
   margin-top: 4px;
+  font-size: 2rem;
 }
 ul li a span:hover {
   color: rgb(253, 251, 251);
@@ -151,6 +152,7 @@ ul li a:hover:before {
   color: rgb(254, 254, 254);
   background-color:#0096DFff ;
   border-radius: 5px;
+  font-size: 24px;
 }
 .dropdown-item:hover {
   color: #0096DFff;
