--- a/style.css
+++ b/style.css
@@ -1,80 +1,90 @@
 /* @import url('https://fonts.googleapis.com/css2?family=Koulen&display=swap'); */
 @import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Caveat+Brush&display=swap');
+
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-  }
-  body {
-    background-color: rgb(183, 227, 239);
-    /* background-color: #333; */
-    height: 100vh;
-    /* display: flex;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background-color: rgb(183, 227, 239);
+  /* background-color: #333; */
+  height: 100vh;
+  /* display: flex;
       justify-content: center;
       align-items: center; */
-    color:#2C83D7ff ;
-    text-transform: lowercase;
-  }
-  header nav {
-    display: flex;
-    justify-content: space-between;
-  }
-  header nav .btn-outline-primary {
-    color: #00458f;
-  }
-  
-  /**** css *** navbar*/
-  .bg-light {
-    background-color: rgba(37, 194, 233, 1)!important;
+  color: #2C83D7ff;
+  text-transform: lowercase;
 }
-  ul {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  ul li {
-    position: relative;
-    list-style: none;
-    margin: 5px;
-  }
-  
-  a {
-    position: relative;
-    display: block;
-    height: 40px;
-    text-decoration: none;
-    padding: 5px 10px;
-    font-weight: 300;
-    letter-spacing: 2px;
-    overflow: hidden;
-  }
-  
-  ul li a span {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    align-items: center; 
-    font-family: 'Caveat', cursive;
 
-    color: #5E5953ff; ;
-}
 header nav {
   display: flex;
   justify-content: space-between;
 }
+
 header nav .btn-outline-primary {
   color: #00458f;
 }
 
 /**** css *** navbar*/
 .bg-light {
-  background-color: #0096DFff!important;
+  background-color: rgba(37, 194, 233, 1) !important;
 }
+
+ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+ul li {
+  position: relative;
+  list-style: none;
+  margin: 5px;
+}
+
+a {
+  position: relative;
+  display: block;
+  height: 40px;
+  text-decoration: none;
+  padding: 5px 10px;
+  font-weight: 300;
+  letter-spacing: 2px;
+  overflow: hidden;
+}
+
+ul li a span {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Caveat', cursive;
+
+  color: #5E5953ff;
+  ;
+}
+
+header nav {
+  display: flex;
+  justify-content: space-between;
+}
+
+header nav .btn-outline-primary {
+  color: #00458f;
+}
+
+/**** css *** navbar*/
+.bg-light {
+  background-color: #0096DFff !important;
+}
+
 ul {
   display: flex;
   flex-direction: row;
@@ -114,6 +124,7 @@ ul li a span {
   margin-top: 4px;
   font-size: 2rem;
 }
+
 ul li a span:hover {
   color: rgb(253, 251, 251);
 }
@@ -136,7 +147,7 @@ ul li a:before {
   width: 100%;
   height: 100%;
   /* background-color: #ed2626; */
-  color:rgb(7, 7, 7);
+  color: rgb(7, 7, 7);
   transform: scaleX(0);
   transform-origin: left;
   transition: 0.5s;
@@ -148,156 +159,124 @@ ul li a:hover:before {
   transition-delay: 0.5s;
 }
 
- .dropdown-item {
+.dropdown-item {
   color: rgb(254, 254, 254);
-  background-color:#0096DFff ;
+  background-color: #0096DFff;
   border-radius: 5px;
   font-size: 24px;
 }
+
 .dropdown-item:hover {
   color: #0096DFff;
-  background-color:rgb(248, 249, 250) ;
+  background-color: rgb(248, 249, 250);
   border-radius: 5px;
 }
-.dropdown-menu{
+
+.dropdown-menu {
   background-color: #0096DFff;
   border: 1px solid whitesmoke;
 }
+
 /* fin css navabar*/
 
 /* css titres et textes pages d'accueil*/
-#apostrophe{
+#apostrophe {
   font-family: 'Satisfy', cursive;
   padding: 0;
   color: #333333;
 
 }
-h1{
+
+h1 {
   margin-top: 1em;
   color: #404040;
   text-transform: uppercase;
 }
-#H1Apostrophe{
+
+#H1Apostrophe {
   display: flex;
   flex-direction: row;
   justify-content: center;
   letter-spacing: 0.2em;
 
 }
-h2{
+
+h2 {
   color: #000;
   text-transform: capitalize;
 }
-h1, h2{
-    text-align: center;
-    margin-bottom: 1em;
+
+h1,
+h2 {
+  text-align: center;
+  margin-bottom: 1em;
 }
+
 /* css titres et textes pages d'acceuil*/
-.container-fluid{
+.container-fluid {
   font-family: 'Caveat', cursive;
   font-size: 2em;
   color: #0F3457;
-  text-transform:initial;
+  text-transform: initial;
 }
 
-p{
-  text-align: center;
+p {
   padding: 5%;
 }
-.MargTParagraphe{
+
+.MargTParagraphe {
   margin-top: 1.5em;
+  color: #0F3457;
+  font-size: 1em;
+  text-transform: initial;
+  text-align: start;
+  letter-spacing: 3px;
+ 
 }
-.important{
+.MargTParagraphe p, span {
+  margin-top: 1.5em;
+  color: #0F3457;
+  font-size: 1em;
+  text-transform: initial;
+  text-align: center;
+  letter-spacing: 3px;
+ 
+}
+.MargTParagraphe .contactonsNous, a{
+  margin-top: 1.5em;
+  color: #0F3457;
+  font-size: 1.08rem;
+  text-transform: initial;
+  /* text-align: center; */
+  /* letter-spacing: 6px; */
+}
+.important {
   font-weight: bold;
-  text-decoration:underline;
+  text-decoration: underline;
 }
-.textAlignCenter{
-display: inline;
-font-size: 29px;
+
+.textAlignCenter {
+  display: inline;
+  font-size: 29px;
 }
-.noWrap{
-display: inline;
-color: #000000;
+
+.noWrap {
+  display: inline;
+  color: #000000;
 }
+
+.colorRed {
+  color: #DC4C86ff;
+  text-transform: capitalize;
+}
+
 /* fin css titres et textes page d'accueil */
 
 
-
-
-  /* css image mobile box tournante avec description après le hover*/
-   .container {
-    width: 270px;
-    height: 270px;
-    position: relative;
- }
- 
- .container .imgTournante {
-    width: 100%;
-    padding-top: 7%;
- }
- 
- .container:before {
-   position: absolute;
-   top: 0;
-   left: 0;
-   height: 100%;
-   width: 100%;
-   content: '';
-   background-color: #2d3436;
-   opacity: 0.8;
- }
- 
- .caption {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    color: white;
-    text-transform: uppercase;
- }
- 
- h3 {
-    text-align: center;
-    font-size: 17px;
-    padding: 20px;
-    margin-top: 20px;
-    background: rgba(0, 0, 0, 0.8);
- }
- 
- #paragraphe {
-    font-size: 14px;
-    width: 80%;
-    align-self: center;
-    text-align: center;
- }
- 
- #linkCard {
-    text-decoration: none;
-    background: #000;
-    color: #fff;
-    width: 65%;
-    padding: 25px;
-    margin-bottom: 48px;
-    align-self: center;
-    text-align: center;
-    /* HEIGHT: 100px; */
-    /* vertical-align: text-top; */
-    padding-top: 3px;
-}
-/* fin css titres et textes page d'accueil */
 
 
 /* css image mobile box tournante avec description après le hover*/
-
-.cubicBezier{
-  transition: all 0.5s cubic-bezier(.43,.01,0,1.19);
-
-}
- .container {
+.container {
   width: 270px;
   height: 270px;
   position: relative;
@@ -309,14 +288,88 @@ color: #000000;
 }
 
 .container:before {
- position: absolute;
- top: 0;
- left: 0;
- height: 100%;
- width: 100%;
- content: '';
- background-color: #2d3436;
- opacity: 0.8;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  content: '';
+  background-color: #2d3436;
+  opacity: 0.8;
+}
+
+.caption {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  color: white;
+  text-transform: uppercase;
+}
+
+h3 {
+  text-align: center;
+  font-size: 17px;
+  padding: 20px;
+  margin-top: 20px;
+  background: rgba(0, 0, 0, 0.8);
+}
+
+#paragraphe {
+  font-size: 14px;
+  width: 80%;
+  align-self: center;
+  text-align: center;
+}
+
+#linkCard {
+  text-decoration: none;
+  background: #000;
+  color: #fff;
+  width: 65%;
+  padding: 25px;
+  margin-bottom: 48px;
+  align-self: center;
+  text-align: center;
+  /* HEIGHT: 100px; */
+  /* vertical-align: text-top; */
+  padding-top: 3px;
+}
+
+/* fin css titres et textes page d'accueil */
+
+
+/* css image mobile box tournante avec description après le hover*/
+
+.cubicBezier {
+  transition: all 0.5s cubic-bezier(.43, .01, 0, 1.19);
+
+}
+
+.container {
+  width: 270px;
+  height: 270px;
+  position: relative;
+}
+
+.container .imgTournante {
+  width: 100%;
+  padding-top: 7%;
+}
+
+.container:before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  content: '';
+  background-color: #2d3436;
+  opacity: 0.8;
 }
 
 .caption {
@@ -339,7 +392,7 @@ h3 {
   font-size: 17px;
   padding: 20px;
   margin-top: 20px;
-  background:linear-gradient(290deg, #FD991Dff, #C6BAD7ff, #5E5953ff, #0096DFff, #D83F22ff, #25C2E9ff, #FCEC3Bff);
+  background: linear-gradient(290deg, #FD991Dff, #C6BAD7ff, #5E5953ff, #0096DFff, #D83F22ff, #25C2E9ff, #FCEC3Bff);
 }
 
 #paragraphe {
@@ -360,67 +413,69 @@ h3 {
   text-align: center;
   border-radius: 5px;
 }
+
 #linkCard:hover {
   text-decoration: none;
- background-color: #FCEC3Bff;
+  background-color: #FCEC3Bff;
   color: #003E80;
   width: 100%;
   padding-top: 6%;
   margin-top: 1em;
   align-self: center;
   text-align: center;
- border-radius: 5px;
+  border-radius: 5px;
 }
+
 /*hovering effect goes here */
 .container {
- background-color: #0096DFff;
- border: 10px solid rgba(52, 137, 179, 0.924);
- overflow: hidden;
+  background-color: #0096DFff;
+  border: 10px solid rgba(52, 137, 179, 0.924);
+  overflow: hidden;
 }
 
 .imgTournante {
- transition: all 0.5s;
+  transition: all 0.5s;
 }
 
 .container:hover .imgTournante {
- transform: rotate(720deg) scale(0);
- opacity: 0;
+  transform: rotate(720deg) scale(0);
+  opacity: 0;
 }
 
 .container:before {
- background-color: #CEFF90;
- opacity: 0;
- transition: all 0.3s; 
+  background-color: #CEFF90;
+  opacity: 0;
+  transition: all 0.3s;
 }
 
 .container:hover:before {
- opacity: 1;
- transition-delay: 0.5s;
+  opacity: 1;
+  transition-delay: 0.5s;
 }
 
 #linkCard {
- transform: translateY(-300px);
- transition: all 0.2s;
+  transform: translateY(-300px);
+  transition: all 0.2s;
 }
 
 .container:hover #linkCard {
- transform: translateY(0);
- transition-delay: 0.5s;
+  transform: translateY(0);
+  transition-delay: 0.5s;
 }
 
 #paragraphe {
- transform: translateY(-300px);
- transition: all 0.2s;
+  transform: translateY(-300px);
+  transition: all 0.2s;
 }
 
 .container:hover #paragraphe {
- transform: translateY(0);
- transition-delay: 0.7s;
+  transform: translateY(0);
+  transition-delay: 0.7s;
 }
 
 h3 {
- transform: translateY(-300px);
- transition: all 0.2s;
+  transform: translateY(-300px);
+  transition: all 0.2s;
 }
 
 .container:hover h3 {
@@ -443,24 +498,28 @@ h3 {
   /* padding: 1em; */
   font-size: 1.2em;
 }
-.btn:hover{
+
+.btn:hover {
   background-color: #70d5d7;
   color: #2C83D7ff;
-  transition: all 0.5s cubic-bezier(.17,.67,.66,.8);
+  transition: all 0.5s cubic-bezier(.17, .67, .66, .8);
   font-weight: 900;
 
 }
-.btnCenter{
-display: flex;
-justify-content: center;
-padding: 1em;
+
+.btnCenter {
+  display: flex;
+  justify-content: center;
+  padding: 1em;
 }
 
+.widthButton{
+white-space:nowrap;}
 
- /* css effets swap buttons */
+/* css effets swap buttons */
 
- 
- .effetButtons {
+
+.effetButtons {
   text-decoration: none;
   text-transform: uppercase;
   font-size: 14px;
@@ -468,7 +527,7 @@ padding: 1em;
   font-family: verdana;
   letter-spacing: 3px;
   height: 86px;
-  width: 232px;
+  width: 14em;
   /* line-height: 60px; */
   text-align: center;
   /* color: #6D0E09; */
@@ -481,13 +540,13 @@ padding: 1em;
   content: "";
   position: absolute;
   height: 114px;
-  width: 230px;
+  width: 14em;
   top: -15px;
   left: 0;
   border-left: 2px solid #040F10;
   border-right: 2px solid #001010;
   transition: all 01s;
-  transition: all 1.6s cubic-bezier(.17,.67,.66,.8);
+  transition: all 1.6s cubic-bezier(.17, .67, .66, .8);
   border-radius: 3%;
 }
 
@@ -495,12 +554,12 @@ padding: 1em;
   content: "";
   position: absolute;
   height: 84px;
-  width: 255px;
+  width: 16em;
   top: 0;
   left: -15px;
   border-top: 2px solid #001010;
   border-bottom: 2px solid #040F10;
-  transition: all 1.6s cubic-bezier(.17,.67,.66,.8);
+  transition: all 1.6s cubic-bezier(.17, .67, .66, .8);
   border-radius: 3%;
 }
 
@@ -515,6 +574,27 @@ padding: 1em;
 
 /* margin top image*/
 
-#MargTImage{
+#MargTImage {
   margin-top: 2em;
+}
+
+/* footer icones sociaux*/
+
+.icons {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  font-size: 40px;
+}
+
+.icons a {
+  color: #001010;
+  height: 100px;
+}
+
+/* footer contact*/
+.contactFooter{
+text-align: center;
+color: #001010;
+
 }
