--- a/style.css
+++ b/style.css
@@ -205,6 +205,7 @@ h1 {
 h2 {
   color: #000;
   text-transform: capitalize;
+  font-size: 1.9em;
 }
 
 h1,
@@ -241,27 +242,17 @@ p {
   text-transform: initial;
   text-align: start;
 }
-/* #miseEnFormeParagraphe, .important{
-  font-weight: 900;
-  text-decoration: underline;
-} */
 
-/* .MargTParagraphe p + span {
-  margin-top: 1.5em;
-  color: #0F3457;
-  font-size: 1em;
-  text-transform: initial;
-  text-align: center;
-  letter-spacing: 3px;
- 
-}
-.MargTParagraphe .contactonsNous:a{
+
+
+.MargTParagraphe .contactonsNous  a{
   margin-top: 1.5em;
   color: #0F3457;
   font-size: 1.08rem;
   text-transform: initial;
   /* text-align: center; */
   /* letter-spacing: 6px; */
+}
 .important {
   font-weight: bold;
   text-decoration: underline;
@@ -536,7 +527,7 @@ white-space:nowrap;}
   text-transform: uppercase;
   font-size: 14px;
   font-weight: 900;
-  font-family: verdana;
+  font-family: 'Gentium Book Basic', serif;
   letter-spacing: 3px;
   height: 86px;
   width: 14em;
@@ -573,6 +564,7 @@ white-space:nowrap;}
   border-bottom: 2px solid #040F10;
   transition: all 1.6s cubic-bezier(.17, .67, .66, .8);
   border-radius: 3%;
+
 }
 
 .effetButtons:hover:before {
@@ -610,8 +602,58 @@ white-space:nowrap;}
 }
 
 /* footer contact*/
+
+.footer-center, .footer-right{
+
+
+
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    /* margin: -24px; */
+  
+    /* WIDTH: 100%; */
+    flex: 0;
+    max-width: 100%;
+
+
+
+
+}
 .contactFooter{
 text-align: center;
 color: #001010;
+display: block;
+font-family: 'Gentium Book Basic', serif;
 
+
+}
+.contactFooter a {
+  height: 6.5em;
+  font-size: 2em;
+  text-transform: initial;
+}
+.contactFooter i {
+  
+  font-size: 2em;
+ 
+}
+.contactFooter i:hover {
+  color: red;
+ 
+}
+.contactFooter span{
+font-size: 1em;
+}
+
+/*footer menu footer*/
+
+.menuFooter{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  
 }
