--- a/style.css
+++ b/style.css
@@ -179,7 +179,10 @@ ul li a:hover:before {
 }
 
 /* fin css navabar*/
-
+/* BANNIERE IMG*/
+#banniereImg{
+  margin-top: 3em;
+}
 /* css titres et textes pages d'accueil*/
 #apostrophe {
   font-family: 'Satisfy', cursive;
@@ -586,6 +589,7 @@ white-space:nowrap;}
   font-family: 'Gentium Book Basic', serif;
   font-size: 1.3em;
   margin-top: 4em;
+  color: #001010;
 }
 /* footer icones sociaux*/
 
@@ -655,5 +659,12 @@ font-size: 1em;
   align-items: center;
   flex-direction: column;
   justify-content: center;
+  border-top: 2px solid black;
+  padding: 1.5em;
   
+}
+.menuFooter a{
+  color: #040F10;
+  font-size: 1.8em;
+  text-transform: capitalize;
 }
