--- a/style.css
+++ b/style.css
@@ -187,7 +187,7 @@ ul li a:hover:before {
 #apostrophe {
   font-family: 'Satisfy', cursive;
   padding: 0;
-  color: #333333;
+  color: #dc4c86;
 
 }
 
@@ -626,31 +626,31 @@ white-space:nowrap;}
 
 
 }
-.contactFooter{
-text-align: center;
-color: #001010;
-display: block;
-font-family: 'Gentium Book Basic', serif;
 
-
+.footer-left{
+  max-width: 100%;
+  text-align: center;
+}
+.contactFooter {
+  text-align: center;
+  color: #001010;
+  display: block;
+  font-family: 'Gentium Book Basic', serif;
+  FONT-SIZE: 1.5EM;
+  text-transform: uppercase;
 }
 .contactFooter a {
-  height: 6.5em;
+  height: 2.5em;
   font-size: 2em;
   text-transform: initial;
 }
 .contactFooter i {
-  
+  color: #dc4c86;
   font-size: 2em;
  
 }
-.contactFooter i:hover {
-  color: red;
- 
-}
-.contactFooter span{
-font-size: 1em;
-}
+
+
 
 /*footer menu footer*/
 
